tests/parser/define-instance.9.bad.error
error: Malformed instance head
  --> test:4:26
   |
 4 |  (define-instance (C :a :b =>))
   |                            ^^ unexpected `=>`
help: remove the `=>`
 4 | (define-instance (C :a :b ))
   |                           
